# inova_rank

./: .gitignore  Pipfile  db.sqlite3
core/: api.py  settings.py  urls.py  utils.py
ideas/: admin.py  api.py  models.py  schemas.py
ideas/migrations/: 0001_initial.py  0002_rename_ideas_idea.py  0003_remove_idea_user_alter_idea_num_genius_and_more.py  0004_idea_slug.py
inova_rank_api/: .gitignore  README.md  database.db  pyproject.toml
inova_rank_api/inova_rank_api/: app.py  database.py  models.py  schemas.py  security.py  settings.py
inova_rank_api/inova_rank_api/routers/: auth.py  categories.py  category.py  ideas.py  users.py
inova_rank_api/migrations/: env.py
inova_rank_api/migrations/versions/: 2264bc9036f6_adjuste_ideas_table.py  22ca6930444e_create_users_table.py  2ebfaff4577d_adjuste_ideas_table.py  8fd6aada4829_adjuste_ideas_table.py  ac715b63471e_create_ideas_table.py  b43c5114a8e3_adjuste_ideas_table.py  d3bbe5004b17_adjuste_ideas_table.py
inova_rank_api/tests/: conftest.py  test_categories.py  test_category.py  test_db.py  test_ideas.py  test_security.py  test_users.py
inova_rank_ui/: nuxt.config.ts  package-lock.json  package.json
inova_rank_ui/components/: Editor.vue  Navbar.vue
inova_rank_ui/composables/: useAuth.ts
inova_rank_ui/pages/: index.vue
inova_rank_ui/services/: authService.ts  categoriesService.ts  ideaService.ts
inova_rank_ui/utils/: validatorsUtils.ts
ui/: app.config.ts  nuxt.config.ts  package.json
ui/components/: Navbar.vue
ui/layouts/: default.vue
ui/pages/: index.vue
ui/utils/: timeUtils.ts
(+8 files in other folders)
